--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,17 @@
 <html>
   <head>
-    <title>Angular 2 JSPM Seed</title>
+    <title>Seeded Angular 2 QuickStart</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="./">
 
-    <link rel="stylesheet" href="assets/material-icons.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <!--removeIf(production)-->
     <script src="jspm/system.js"></script>
     <script src="jspm-config/config.js"></script>
     <script>
-      System.import('src/boot')
+      System.import('src/main')
         .then(null, console.error.bind(console));
     </script>
     <!--endRemoveIf(production)-->
